macros/blueprint-proc-macro/tests/invalid_cases/job/05_function_without_return.rs
use gadget_blueprint_proc_macro::job;

#[job(params(n), result(_))]
fn keygen(n: u16) {}

fn main() {}
