macros/blueprint-proc-macro/tests/invalid_cases/job/05_function_without_return.stderr
error: Function must have a return type
 --> tests/invalid_cases/job/05_function_without_return.rs:3:1
  |
3 | #[job(params(n), result(_))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `job` (in Nightly builds, run with -Z macro-backtrace for more info)
